--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<script src="game_login.js"></script>
+<script src="main.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -31,7 +31,7 @@
 		<br> 
 	</div>
 	<br>
-	<button style="width: 30%;" class="btn btn-primary" onclick="addUser();">Login</button>
+	<button style="width: 30%;" class="btn btn-primary" onclick="addUser()">Login</button>
 </center>
 </div>
 </body>
